# galactic

galactic/: README  game_window.cpp  game_window.h  gaming_sprites.cpp  gaming_sprites.h  glad.c  libturbojpeg.pc  main.cpp  meson.build  readme.md  skia-static.pc  skia.pc  space_sprites.cpp  space_sprites.h  sprite.cpp  sprite.h  turbojpeg-static.pc
galactic/inc/: graphic_base.h  std_base.h
galactic/inc/glad/: glad.h
galactic/sksvg/: 1.txt  SkSVGAttribute.cpp  SkSVGAttributeParser.cpp  SkSVGCircle.cpp  SkSVGContainer.cpp  SkSVGDOM.cpp  SkSVGEllipse.cpp  SkSVGFe.cpp  SkSVGFeColorMatrix.cpp  SkSVGFeComposite.cpp  SkSVGFeTurbulence.cpp  SkSVGFilter.cpp  SkSVGFilterContext.cpp  SkSVGGradient.cpp  SkSVGLine.cpp  SkSVGLinearGradient.cpp  SkSVGNode.cpp  SkSVGPath.cpp  SkSVGPattern.cpp  SkSVGPoly.cpp  SkSVGRadialGradient.cpp  SkSVGRect.cpp  SkSVGRenderContext.cpp  SkSVGSVG.cpp  SkSVGShape.cpp  SkSVGStop.cpp  SkSVGText.cpp  SkSVGTransformableNode.cpp  SkSVGUse.cpp
galactic/sksvg/include/: SkSVGAttribute.h  SkSVGAttributeParser.h  SkSVGCircle.h  SkSVGClipPath.h  SkSVGContainer.h  SkSVGDOM.h  SkSVGDefs.h  SkSVGEllipse.h  SkSVGFe.h  SkSVGFeColorMatrix.h  SkSVGFeComposite.h  SkSVGFeTurbulence.h  SkSVGFilter.h  SkSVGFilterContext.h  SkSVGG.h  SkSVGGradient.h  SkSVGHiddenContainer.h  SkSVGLine.h  SkSVGLinearGradient.h  SkSVGNode.h  SkSVGPath.h  SkSVGPattern.h  SkSVGPoly.h  SkSVGRadialGradient.h  SkSVGRect.h  SkSVGRenderContext.h  SkSVGSVG.h  SkSVGShape.h  SkSVGStop.h  SkSVGText.h  SkSVGTransformableNode.h  SkSVGUse.h  SkSVGValue.h
